--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ license = "MIT OR Apache-2.0"
 edition = "2018"
 
 [dependencies]
+memmap2 = "0.5.3"
 swash = { git = "https://github.com/dfrg/swash" }
